# RoseHack2025

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Interface.cpp  Interface.h  Makefile  Output.cpp  Output.h  README.md  User.cpp  User.h  cmake_install.cmake  exercises.csv  exercises_filtered.csv  exercises_filtered2.csv  main.cpp  users.csv  workout.cpp  workout.h
